# ddp-residual-cnn

./: README.md  dataloader.py  model.py  pyproject.toml  setup.py  train.py
